--- a/less/gasp-internal/bootswatch.less
+++ b/less/gasp-internal/bootswatch.less
@@ -237,13 +237,13 @@ input {
 // Indicators =================================================================
 
 .close {
-  color: #fff;
+  color: #000;
   text-decoration: none;
   opacity: 0.4;
 
   &:hover,
   &:focus {
-    color: #fff;
+    color: #000;
     opacity: 1;
   }
 }
