add style for blueihelp

--- a/less/system-builder/system-builder-app.less
+++ b/less/system-builder/system-builder-app.less
@@ -165,3 +165,17 @@ body {
 .clear {
   clear: both;
 }
+
+.popover .arrow {
+  display: none
+}
+
+.popover {
+  max-width: 750px;
+}
+
+.rds-asf-blueihelp {
+  margin-top:32px; 
+  color:blue;
+}
+
