add style to hide feedback when readonly

--- a/less/system-builder/system-builder-app.less
+++ b/less/system-builder/system-builder-app.less
@@ -179,3 +179,8 @@ body {
   color:blue;
 }
 
+/* to hide feedback glyicon when disabled/readonly */
+input[disabled] + .form-control-feedback {
+  display: none
+}
+
